Fixed some rendering layout issues.

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,10 @@ input.ng-invalid {
     width: 1200px;
 }
 
+.canvas {
+    margin-top: 50px;
+}
+
 
 
 
